# crace

./: .gitattributes  MANIFEST.in  Makefile  README.md  generate_pyproject.py  pyproject.toml  setup.py
.github/workflows/: docs.yml  gh-pages.yml  pb-pypi.yml  test.yml  wheels.yml
crace/: __init__.py  _vergit.py
crace/configurator/: configurator.py  crace.py  irace.py  tester.py
crace/containers/: __init__.py  configurations.py  crace_option.py  crace_options.py  crace_results.py  experiments.py  forbidden_expressions.py  instances.py  parameters.py  scenario.py  toolbox.py
crace/elimination_tests/: __init__.py  eliminator.py  tests.py
crace/errors/: __init__.py
crace/execution/: __init__.py  execution_base.py  execution_pool.py  local_concurrent.py  mpi.py  target_evaluator.py  target_runner.py
crace/inst/: output_sed.sh
crace/inst/examples/acotsp/: instance-list.txt  parameters.txt  scenario.txt  target-runner
crace/inst/examples/mik/: default.txt  instance-list.txt  parameters.txt  scenario.txt  target-runner
crace/inst/examples/mik/aclib/executable/: cplex12.6_wrapper.rb  cplex12.6_wrapper_aclib.rb  run_cplex12.6.rb
crace/inst/examples/win/: instances.txt  parameters.txt  scenario.txt  target-runner.bat
crace/inst/examples/win/src/: CMakeLists.txt  runner.cpp
crace/inst/templates/: forbidden.txt  instances-list.txt  parameters.txt  scenario.txt
crace/models/: model.py
crace/race/: race.py  race_log.py
crace/scripts/: __init__.py  crace-guide  crace-main  crace-mpi  crace-parallel  main.py  mpi.py  parallel.py  utils.py
crace/settings/: crace_options.json  description.py
crace/threads/: __init__.py
crace/utils/: __init__.py  affinity.py  const.py  format.py  logger.py  reader.py
docs/: _config.yml  _toc.yml  index.md  requirements.txt
docs/_static/: sync_files.sh
docs/_static/css/: custom.css
docs/_static/js/: navbar.js
docs/history/: changelog.md
docs/references/: 404.md  CITIATION.bib  authors.md  changelog.md  index.md
