[build-system]
requires = ["setuptools>=70.1", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crace"
dynamic = ["version"]

description = "crace: A Python implementation of Continuous Racing"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"

authors = [

]
maintainers = [
  { name = "Leslie Pérez Cáceres", email = "leslie.perez@pucv.cl" },
  { name = "Yunshuang Xiao", email = "yunshuang.xiao@ulb.be" },
  { name = "crace developers", email = "race.autoconfig@gmail.com" }
]

license = { text = "GPL-3.0-or-later" }

dependencies = [
  "numpy>=1.19.5",
  "pandas>=1.1.5",
  "scipy>=1.5.4",
  "statutils>=0.1.0",
  "statsmodels>=0.12.2",
  "tzlocal>=4.2"
]

[project.optional-dependencies]
all = ["mpi4py>=3.0.3"]


[project.scripts]
crace = "crace.scripts:crace_run"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
crace = [
  "settings/*.json",
  "scripts/*",
  "inst/**",
  "vignettes/**"
]

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "crace/_version.py"
